@startuml
skinparam classAttributeIconSize 0

package "verificadorSesion" #DDDDDD {
    class VerificadorSesion {
    -intentoUsuarios: <String, IntentosInicioSesion>
    -instance: VerificadorSesion

    +Usuario loggearUsuario(String, String)
    }

    class IntentosInicioSesion {
    -usuario: String
    -cantIntentos: int
    -timestamp: long

    +void aumentarIntentos()
    +boolean puedeIntentarLoggearse()
    -void actualizarTimeStamp()
    }
}


package "roles" #DDDDDD {
    abstract Usuario {
    -usuario: String
    -contraseniaHasheada: String
    +miValidador : ValidadorDeMetricas
    -salt: [byte]

    +String generarHash(String, [byte])
    }

    note right: Los demas usuarios estan en el modelo de dominio
}

package "password" #DDDDDD {

    class ValidadorDeMetricas {
    -validadores: [ValidadorContrasenia]

    +String validarTodo(String, String)
    }

    abstract class ValidadorContrasenia {
    #mensajeError: String

    +void validar(String, String)
    +boolean condicionInvalidez(String, String)
    }

    class ValidadorDeCaracteres extends ValidadorContrasenia {

    +boolean caracterEsValido(String, int)
    +boolean caracterValidoAscii(int)
    +boolean caracterValidoUNICODE(int)
    }

    class ValidadorContraseniaComun extends ValidadorContrasenia {

    }

    class ValidadorContraseniaNoContieneUsuario extends ValidadorContrasenia {

    }

    class ValidadorLongitudContrasenia extends ValidadorContrasenia {

    }

    class CorrectorDeEspacio {

    +String contraseniaSinEspacios(String)
    }
}



VerificadorSesion --> IntentosInicioSesion
VerificadorSesion ..> Usuario
VerificadorSesion --> VerificadorSesion

Usuario --> ValidadorDeMetricas

ValidadorDeMetricas --> "*" ValidadorContrasenia
ValidadorDeMetricas ..> CorrectorDeEspacio

@enduml